# biz/handler/user/user_handler.go
@@ -6,6 +6,7 @@ import (
 	"github.com/cloudwego/hertz/pkg/protocol/consts"
 	"workspace-yikou-ai-go/biz/model/api/common"
 	api "workspace-yikou-ai-go/biz/model/api/user"
+	"workspace-yikou-ai-go/biz/model/vo"
 	service "workspace-yikou-ai-go/biz/service/user"
 )
 
@@ -32,4 +33,47 @@ func UserRegister(ctx context.Context, c *app.RequestContext) {
 		return
 	}
 	c.JSON(consts.StatusOK, common.NewSuccessResponse[int64](userId))
+}
+
+// UserLogin 用户登录
+// @Summary 用户登录
+// @Description 用户登录
+// @Tags 用户模块
+// @Accept json
+// @Produce json
+// @Param req body api.YiKouUserLoginRequest true "用户登录请求"
+// @Success 200 {object} api.YiKouUserLoginResponse "登录用户信息"
+// @Router /user/login [post]
+func UserLogin(ctx context.Context, c *app.RequestContext) {
+	req := &api.YiKouUserLoginRequest{}
+	err := c.BindAndValidate(req)
+	if err != nil {
+		c.JSON(consts.StatusOK, common.NewErrorResponse[any](err))
+		return
+	}
+	userService := service.NewUserService(ctx, c)
+	userVo, err := userService.UserLogin(req)
+	if err != nil {
+		c.JSON(consts.StatusOK, common.NewErrorResponse[any](err))
+		return
+	}
+	c.JSON(consts.StatusOK, common.NewSuccessResponse[vo.LoginUserVo](userVo))
+}
+
+// GetLoginUser 获取登录用户信息
+// @Summary 获取登录用户信息
+// @Description 获取登录用户信息
+// @Tags 用户模块
+// @Accept json
+// @Produce json
+// @Success 200 {object} api.YiKouUserLoginResponse "登录用户信息"
+// @Router /user/get/login [get]
+func GetLoginUser(ctx context.Context, c *app.RequestContext) {
+	userService := service.NewUserService(ctx, c)
+	userVo, err := userService.GetLoginUserVo()
+	if err != nil {
+		c.JSON(consts.StatusOK, common.NewErrorResponse[any](err))
+		return
+	}
+	c.JSON(consts.StatusOK, common.NewSuccessResponse[vo.LoginUserVo](userVo))
 }
